--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "test":"jest"
+    "start": "nodemon node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
@@ -14,11 +14,14 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.2"
   },
   "main": "app.js",
   "devDependencies": {
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
     "supertest": "^6.3.3"
   },
