Updated the POST API for throwing an error when one of the request body misses form the user

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "nodemon node ./bin/www",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
